--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: ms_pg_sql
     image: postgres
     environment:
-      POSTGRES_USER: alibou
-      POSTGRES_PASSWORD: alibou
+      POSTGRES_USER: ayoub
+      POSTGRES_PASSWORD: ayoub
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
@@ -45,8 +45,8 @@ services:
     volumes:
       - mongo:/data
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=alibou
-      - MONGO_INITDB_ROOT_PASSWORD=alibou
+      - MONGO_INITDB_ROOT_USERNAME=ayoub
+      - MONGO_INITDB_ROOT_PASSWORD=ayoub
 
   mongo-express:
     image: mongo-express
@@ -55,8 +55,8 @@ services:
     ports:
       - 8081:8081
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=alibou
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=alibou
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=ayoub
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=ayoub
       - ME_CONFIG_MONGODB_SERVER=mongodb
 
   zookeeper:
