Trigger Docker build workflow

--- a/services/config-server/src/main/resources/configurations/discovery-service.yml
+++ b/services/config-server/src/main/resources/configurations/discovery-service.yml
@@ -1,6 +1,6 @@
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka-server
   client:
     registerWithEureka: false
     fetchRegistry: false
