--- a/services/config-server/src/main/resources/configurations/customer-service.yml
+++ b/services/config-server/src/main/resources/configurations/customer-service.yml
@@ -5,7 +5,7 @@ spring:
     mongodb:
       username: alibou
       password: alibou
-      host: localhost
+      host: mongodb
       port: 27017
       database: customer
       authentication-database: admin
