--- a/services/config-server/src/main/resources/configurations/product-service.yml
+++ b/services/config-server/src/main/resources/configurations/product-service.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/product
+    url: jdbc:postgresql://postgresql:5432/product
     username: alibou
     password: alibou
   jpa:
