Trigger Docker build workflow

--- a/services/config-server/src/main/resources/configurations/application.yml
+++ b/services/config-server/src/main/resources/configurations/application.yml
@@ -1,6 +1,6 @@
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka-server
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka
