Trigger Docker build workflow

--- a/services/config-server/src/main/resources/configurations/payment-service.yml
+++ b/services/config-server/src/main/resources/configurations/payment-service.yml
@@ -21,4 +21,4 @@ spring:
         spring.json.type.mapping: paymentConfirmation:com.alibou.ecommerce.notification.PaymentNotificationRequest
 application:
   config:
-    product-url: http://localhost:8222/api/v1/products
+    product-url: http://PRODUCT-SERVICE:8050/api/v1/products
