--- a/services/config-server/src/main/resources/configurations/product-service.yml
+++ b/services/config-server/src/main/resources/configurations/product-service.yml
@@ -4,8 +4,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://postgresql:5432/product
-    username: alibou
-    password: alibou
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -16,6 +16,5 @@ spring:
     enabled: true
     baseline-description: "init"
     baseline-version: 0
-    user: ${spring.datasource.username}
-    password: ${spring.datasource.password}
-
+    user: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
