--- a/customer.yaml
+++ b/customer.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: customer-service
+        app: customer-servicea
     spec:
       containers:
         - name: customer-service
