--- a/kafka-deployment.yaml
+++ b/kafka-deployment.yaml
@@ -18,18 +18,27 @@ spec:
         - name: kafka
           image: confluentinc/cp-kafka:7.4.3
           env:
-            - name: KAFKA_BROKER_ID
+            - name: KAFKA_NODE_ID
               value: "1"
-            - name: KAFKA_ZOOKEEPER_CONNECT
-              value: zookeeper:2181
+            - name: KAFKA_PROCESS_ROLES
+              value: "broker,controller"
+            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
+              value: "1@localhost:9093"
             - name: KAFKA_LISTENERS
-              value: PLAINTEXT://0.0.0.0:9092
+              value: "PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093"
             - name: KAFKA_ADVERTISED_LISTENERS
-              value: PLAINTEXT://kafka:9092
-            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
-              value: "1"
+              value: "PLAINTEXT://kafka:9092"
+            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+              value: "PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT"
+            - name: KAFKA_CONTROLLER_LISTENER_NAMES
+              value: "CONTROLLER"
+            - name: KAFKA_LOG_DIRS
+              value: "/tmp/kraft-combined-logs"
+            - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
+              value: "true"
           ports:
             - containerPort: 9092
+            - containerPort: 9093
 ---
 apiVersion: v1
 kind: Service
@@ -42,4 +51,7 @@ spec:
     - protocol: TCP
       port: 9092
       targetPort: 9092
+    - protocol: TCP
+      port: 9093
+      targetPort: 9093
   type: ClusterIP
