--- a/product-service.yaml
+++ b/product-service.yaml
@@ -1,3 +1,14 @@
+# Secret for DB credentials
+apiVersion: v1
+kind: Secret
+metadata:
+  name: db-credentials
+type: Opaque
+stringData:
+  DB_USERNAME: alibou
+  DB_PASSWORD: alibou
+---
+# Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -43,6 +54,7 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 20
 ---
+# Service
 apiVersion: v1
 kind: Service
 metadata:
