--- a/services/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/services/config-server/src/main/resources/configurations/gateway-service.yml
@@ -16,14 +16,14 @@ spring:
           predicates:
             - Path=/api/v1/orders/**
         - id: order-lines-service
-          uri: lb:http://ORDER-SERVICE
+          uri: lb:http://order-service
           predicates:
             - Path=/api/v1/order-lines/**
         - id: product-service
-          uri: lb:http://PRODUCT-SERVICE
+          uri: lb:http://customer-service
           predicates:
             - Path=/api/v1/products/**
         - id: payment-service
-          uri: lb:http://PAYMENT-SERVICE
+          uri: lb:http://payment-service
           predicates:
             - Path=/api/v1/payments/**
