--- a/gateway.yaml
+++ b/gateway.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: gateway
     spec:
+      dnsPolicy: ClusterFirst
       containers:
         - name: gateway
           image: ayoub1411/gateway:latest
