--- a/services/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/services/config-server/src/main/resources/configurations/gateway-service.yml
@@ -8,22 +8,22 @@ spring:
           enabled: true
       routes:
         - id: customer-service
-          uri: lb:http://CUSTOMER-SERVICE
+          uri: lb://customer-service
           predicates:
             - Path=/api/v1/customers/**
         - id: order-service
-          uri: lb:http://ORDER-SERVICE
+          uri: lb://order-service
           predicates:
             - Path=/api/v1/orders/**
         - id: order-lines-service
-          uri: lb:http://order-service
+          uri: lb://order-lines-service
           predicates:
             - Path=/api/v1/order-lines/**
         - id: product-service
-          uri: lb:http://customer-service
+          uri: lb://product-service
           predicates:
             - Path=/api/v1/products/**
         - id: payment-service
-          uri: lb:http://payment-service
+          uri: lb://payment-service
           predicates:
             - Path=/api/v1/payments/**
