update feign proxies

--- a/services/config-server/src/main/resources/configurations/application.yml
+++ b/services/config-server/src/main/resources/configurations/application.yml
@@ -1,4 +1,9 @@
+eureka:
+  instance:
 
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka
 name:
   value: alibou
 spring:
