--- a/services/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/services/config-server/src/main/resources/configurations/gateway-service.yml
@@ -18,7 +18,7 @@ spring:
           predicates:
             - Path=/api/v1/order-lines/**
         - id: product-service
-          uri: http://product-service.default.svc.cluster.local
+          uri: http://product-service:8050
           predicates:
             - Path=/api/v1/products/**
         - id: payment-service
