--- a/services/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/services/config-server/src/main/resources/configurations/gateway-service.yml
@@ -6,15 +6,15 @@ spring:
 
       routes:
         - id: customer-service
-          uri: lb://customer-service
+          uri: http://customer-service:8090
           predicates:
             - Path=/api/v1/customers/**
         - id: order-service
-          uri: lb://order-service
+          uri: http://order-service:8080
           predicates:
             - Path=/api/v1/orders/**
         - id: order-lines-service
-          uri: lb://order-lines-service
+          uri: http://order-lines-service:8080
           predicates:
             - Path=/api/v1/order-lines/**
         - id: product-service
@@ -22,6 +22,6 @@ spring:
           predicates:
             - Path=/api/v1/products/**
         - id: payment-service
-          uri: lb://payment-service
+          uri: http://payment-service:8070
           predicates:
             - Path=/api/v1/payments/**
